--- a/style.scss
+++ b/style.scss
@@ -66,7 +66,7 @@ $li_color: #f2d7d9;
         li {
           display: flex;
           align-items: center;
-
+          margin-top: 10px;
           p {
             background-color: $li_color;
             padding: 10px;
