added edit and delete button in task list in create branch

--- a/style.scss
+++ b/style.scss
@@ -82,6 +82,7 @@ $li_color: #f2d7d9;
               width: 80px;
               padding: 10px;
               border-radius: 10px;
+              margin-left: 10px;
               border: none;
               outline: none;
               font-size: 20px;
