--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@
   width: 80px;
   padding: 10px;
   border-radius: 10px;
+  margin-left: 10px;
   border: none;
   outline: none;
   font-size: 20px;
